# asciiRT

./: .gitignore  README.md  changes.md  settings.txt  testing.md  todo.md
cppApplication/: CMakeLists.txt  README.md
cppApplication/src/: main.cpp
cppApplication/src/shapes/: mesh.cpp  mesh.hpp
cppApplication/src/utils/: ascii_print.hpp  bvh.hpp  load_mesh.cpp  main_util.hpp  matrix_util.hpp  util.hpp
cppApplicationOld/: README.md
cppApplicationOld/src/: main.cpp
cppApplicationOld/src/shapes/: mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
cppApplicationOld/src/utils/: intersect.cpp  intersect.hpp  load_mesh.cpp  load_mesh.hpp  main_util.hpp  matrix.hpp  ray.cpp  ray.hpp  util.hpp
cppApplication_pre_bvh/src/: main.cpp
cppapplication/: CMakeLists.txt  README.md
cppapplication/src/: main.cpp
cppapplication/src/shapes/: triangle.cpp  triangle.hpp
cppapplication/src/utils/: ascii_print.cpp  bvh.cpp  load_mesh.hpp  main_util.cpp  matrix_util.cpp  rt_util.cpp  rt_util.hpp
cudaApplication/: CMakeLists.txt  README.md
cudaApplication/src/: cuda_rt.cu  cuda_rt.cuh  main.cu
cudaApplication/src/shapes/: mesh.cuh  triangle.cu  triangle.cuh
cudaApplication/src/utils/: aabb.cuh  ascii_print.cu  ascii_print.cuh  ascii_print.hpp  bvh.cu  bvh.cuh  cuda_rt_util.cu  cuda_rt_util.cuh  load_mesh.cu  load_mesh.cuh  m4f.cuh  main_util.cu  main_util.cuh  main_util.hpp  matrix.cuh  matrix_util.cu  matrix_util.cuh  util.cuh  util.hpp  v3f.cuh  v4f.cuh
demos/: car_and_teapot.webm  car_animation.webm  teapots.webm
models/: citations.md
profiling/: analysis1.md  results1.txt
